@@ -49,6 +49,8 @@
     
     <property file="../build_private.properties"/>
     <property file="../build.properties"/>
+    
+    <echo>junit.jar=${junit.jar}</echo>
     <property name="app.name" value="dbWriter"/>
 
     <property name="tarname" value="${ant.project.name}.tar"/>
@@ -434,7 +436,7 @@
             <test name="com.sun.grid.reporting.dbwriter.TestShutdown"/>
             <test name="com.sun.grid.reporting.dbwriter.TestQuotedString"/>
             <test name="com.sun.grid.reporting.dbwriter.TestDerivedValues"/>
-            <test name="com.sun.grid.reporting.dbwriter.TestDelete"/>
+            <!--test name="com.sun.grid.reporting.dbwriter.TestDelete"/-->
             <test name="com.sun.grid.reporting.dbwriter.TestConfigReload"/>
             <test name="com.sun.grid.reporting.dbwriter.TestParsing"/>
         </junit>
